Less strict version requirment

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "gbv/orcid-jskos",
     "description": "JSKOS wrapper to the public ORCID API",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "type": "project",
     "require": {
-        "gbv/jskos": "^0.0.12",
+        "gbv/jskos": "~0.0.12",
         "mashape/unirest-php": "^3.0"
     },
     "license": "AGPL",
