--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "gbv/orcid-jskos",
     "description": "JSKOS wrapper to the public ORCID API",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "type": "project",
     "require": {
         "gbv/jskos": "~0.0.12",
         "mashape/unirest-php": "^3.0"
     },
-    "license": "AGPL",
+    "license": "LGPL",
     "authors": [
         {
             "name": "Jakob Voss",
