--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "gbv/orcid-jskos",
     "description": "JSKOS wrapper to the public ORCID API",
-    "version": "0.1.3",
+    "version": "0.2.0",
     "type": "project",
     "require": {
-        "gbv/jskos": "~0.0.12",
-        "mashape/unirest-php": "^3.0"
+        "gbv/jskos": "^0.3.4",
+        "gbv/jskos-http": "^0.3",
+        "php-http/client-implementation": "^1.0"
     },
     "license": "LGPL",
     "authors": [
@@ -19,5 +20,9 @@
         "psr-4": {
             "": "src"
         }
+    },
+    "require-dev": {
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/curl-client": "^1.7"
     }
 }
